--- a/css/main.css
+++ b/css/main.css
@@ -325,3 +325,54 @@ a.navbar-brand {
     color: var(--color-black-heavy) !important;
     margin-top: 20px;
 }
+
+.depoimentos {
+    padding-top: 100px;
+    padding-bottom: 150;
+}
+
+.card-depoimentos {
+    height: 300px;
+    width: 300px;
+    border-radius: 120px;
+    background-color: var(--color-secondary);
+    position: absolute;
+    right: 0;
+}
+
+.container-dados-depoimento {
+    display: flex;
+}
+
+.depoimento {
+    margin-top: 70px;;
+}
+
+.imagem-depoimento {
+    width: 65px;
+    height: 65px;
+    background-color: var(--color-white);
+    border-radius: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 15px;
+}
+
+#depoimento-1 .imagem-depoimento {
+    background-image: url(../img/diego.jpg);
+    background-size: cover;
+}
+
+.nome-depoimento {
+    color: var(--color-black);
+    font-size: 22px;
+    margin-bottom: 5px;
+}
+
+.nota-depoimento {
+    color: var(--color-primary);
+}
+
+.nota-depoimento span {
+    color: var(--color-black);
+}
