--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ b {
     font-family: 'PoppinsMedium', 'Rubik', sans-serif;
 }
 
+.hidden {
+    display: none !important;
+}
+
 .color-primary {
     color: var(--color-primary)
 }
@@ -331,6 +335,15 @@ a.navbar-brand {
     padding-bottom: 150;
 }
 
+
+.background-depoimentos {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-image: url(../img/bg-icons-1.png);
+}
+
 .card-depoimentos {
     height: 300px;
     width: 300px;
@@ -363,6 +376,16 @@ a.navbar-brand {
     background-size: cover;
 }
 
+#depoimento-2 .imagem-depoimento {
+    background-image: url(../img/ana.jpg);
+    background-size: cover;
+}
+
+#depoimento-3 .imagem-depoimento {
+    background-image: url(../img/joao.jpg);
+    background-size: cover;
+}
+
 .nome-depoimento {
     color: var(--color-black);
     font-size: 22px;
@@ -376,3 +399,29 @@ a.navbar-brand {
 .nota-depoimento span {
     color: var(--color-black);
 }
+
+.texto-depoimento {
+    display: flex;
+    font-size: 16px;
+    color: var(--color-black);
+
+}
+
+.texto-depoimento i {
+    font-size: 35px;
+    color: var(--color-primary);
+}
+
+.texto-depoimento i:first-child {
+    padding-left: 10px;
+    padding-right: 35px;
+}
+
+.texto-depoimento i:last-child {
+    padding-left: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+
