--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ a.navbar-brand {
     color: var(--color-primary);
     font-size: 16px;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 5px;
 }
 
 .title {
@@ -422,6 +422,31 @@ a.navbar-brand {
     display: flex;
     justify-content: center;
     align-items: end;
+}
+
+.reserva {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.card-secondary {
+    background-color: var(--color-secondary);
+    border-radius: 70px;
+    padding: 90px;
+}
+
+.card-reserva {
+    height: 320px;
+    width: 320px;
+    border-radius: 120px;
+    background-color: var(--color-white);
+    position: absolute;
+    right: 0;
+    top: -25px;
+}
+
+.reserva .img-banner img {
+    width: 100%;
 }
 
 
