--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'PoppinsRegular';
-    src: url(../fonts/Poppins-Medium.otf);
+    font-family: 'PoppinsMedium';
+    src: url('../fonts/Poppins-Medium.otf');
 }
 
 @font-face {
-    font-family: 'PoppinsMedium';
-    src: url(../fonts/Poppins-Regular.otf);
+    font-family: 'PoppinsRegular';
+    src: url('../fonts/Poppins-Regular.otf');
 }
 
 :root {
@@ -18,8 +18,10 @@
     --color-secondary: #fff2cc;
     --color-white: #ffffff;
     --color-red: #e74c3c;
+    --color-green: #2ecc71;
     --color-separate: #cccccc;
 }
+
 
 html, body {
     font-family: 'PoppinsRegular', 'Rubik', sans-serif;
@@ -36,16 +38,16 @@ b {
 }
 
 .color-primary {
-    color: var(--color-primary)
+    color: var(--color-primary);
 }
 
 a.navbar-brand {
-   margin-left: -25px;
+    margin-left: -25px;
 }
 
 .nav-link {
     color: var(--color-black)!important;
-    padding-left: 35px!important; 
+    padding-left: 35px!important;
     padding-right: 35px!important;
 }
 
@@ -82,7 +84,7 @@ a.navbar-brand {
 
 .banner {
     padding-top: 110px;
-    padding-bottom:200px;
+    padding-bottom: 200px;
 }
 
 .text-banner {
@@ -98,7 +100,7 @@ a.navbar-brand {
 
 .text-banner p {
     margin-top: 15px;
-    margin-bottom:15px;
+    margin-bottom: 15px;
     font-size: 20px;
 }
 
@@ -159,6 +161,7 @@ a.navbar-brand {
 .card {
     border-radius: 20px;
     padding: 15px 20px;
+    font-size: 20px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1)!important;
     border: none!important;
 }
@@ -167,7 +170,7 @@ a.navbar-brand {
     width: 350px;
     font-size: 14px;
     position: absolute;
-    right:0;
+    right: 0;
     bottom: -75px;
 }
 
@@ -198,7 +201,7 @@ a.navbar-brand {
     margin-bottom: 30px;
 }
 
-.card-icon {
+.card-icon {   
     height: 150px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -210,7 +213,7 @@ a.navbar-brand {
 .card-text {
     color: var(--color-text-out);
     font-size: 15px;
-    padding:0px 30px;    
+    padding: 0px 30px;
 }
 
 .card-text p {
@@ -330,11 +333,11 @@ a.navbar-brand {
     margin-top: 20px;
 }
 
+
 .depoimentos {
     padding-top: 100px;
     padding-bottom: 150px;
 }
-
 
 .background-depoimentos {
     position: absolute;
@@ -350,7 +353,7 @@ a.navbar-brand {
     border-radius: 120px;
     background-color: var(--color-secondary);
     position: absolute;
-    right: 0;
+    left: 0;
 }
 
 .container-dados-depoimento {
@@ -404,7 +407,6 @@ a.navbar-brand {
     display: flex;
     font-size: 16px;
     color: var(--color-black);
-
 }
 
 .texto-depoimento i {
