--- a/css/main.css
+++ b/css/main.css
@@ -451,4 +451,29 @@ a.navbar-brand {
     width: 100%;
 }
 
+footer {
+    background-color: var(--color-secondary);
+}
+
+.logo-footer {
+    width: 150px;
+}
+
+.container-logo-footer, .container-texto-footer, .container-redes-footer {
+    display: flex;
+    align-items: center;
+}
+
+.container-logo-footer {
+    justify-content: start;
+}
+
+.container-texto-footer {
+    justify-content: center;
+}
+
+.container-redes-footer {
+    justify-content: end;
+}
+
 
